# pydantic_hypothesis

./: .gitignore  README.md  pyproject.toml
hypothesis_pydantic/: from_pydantic_type.py
tests/: contract.py  test_with_explicit_builder.py  test_with_implicit_retry.py
